--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Interactive Map</a>
   <div class="">
     <ul class="navbar-nav">
       <li class="nav-item fav-selection">
@@ -14,7 +14,7 @@
             </button>
             <div class="data-filter-group-panel" *ngIf="showFavList">
               <div class="panel-body data-filter-group-panel-body">
-                <input type="search" class="form-control form-control-sm" placeholder="Search" formControlName="querystring" *ngIf="(isFavouritesLoaded$ | async)">
+                <input type="search" class="form-control form-control-sm" placeholder="Search" formControlName="querystring">
                 <ul class="data-filter-group-list" *ngIf="!(isFavouritesLoading$ | async)">
                   <li *ngFor="let item of favourites$ | async">
                     <a (click)="setSelectedFav(item, $event)">{{ item.name }}</a>
