--- a/src/map/modules/period-filter/period-filter.component.html
+++ b/src/map/modules/period-filter/period-filter.component.html
@@ -67,8 +67,11 @@
   <!--period footer-->
   <div class="period-filter-btns">
     <div>
-      <button class="btn btn-sm btn-outline-secondary" (click)="updatePeriod($event)">Update</button>
       <button class="btn btn-sm btn-outline-secondary" (click)="closePeriodFilter($event)">Close</button>
+      <button
+        class="btn btn-sm btn-outline-secondary"
+        [disabled]="(selectedPeriods$ | async).length === 0"
+        (click)="updatePeriod($event)">Update</button>
     </div>
   </div>
   <!--end of period footer-->
