--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light _navbar">
   <a class="navbar-brand" href="#">Interactive Map</a>
   <div class="">
     <ul class="navbar-nav">
@@ -33,3 +33,4 @@
   </div>
 </nav>
 <app-map [vizObject]="vizObject$ | async" *ngIf="vizObject$ | async"></app-map>
+<div class="_container__holder"></div>
