show initial loading when favourite is changing to visualization

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,3 +34,4 @@
 </nav>
 <app-map [vizObject]="vizObject$ | async" *ngIf="(vizObject$ | async)"></app-map>
 <div class="_container__holder" id="mapid" *ngIf="!(vizObject$ | async)"></div>
+<app-loader *ngIf="(isVisualizationLoading$ | async)"></app-loader>
