--- a/src/map/components/map-filter-section/map-filter-section.component.css
+++ b/src/map/components/map-filter-section/map-filter-section.component.css
@@ -1,6 +1,9 @@
 .visualization-filter-section {
   width: 100%;
-  padding: 4px 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding-top: 4px;
 }
 
 .visualization-filter-buttons {
@@ -70,12 +73,11 @@
 
 .visualization-filter-body {
   background-color: rgba(255, 255, 255, 0.95);
-  position: absolute;
+  position: relative;
   padding: 5px;
   margin-top: 2px;
-  width: 400px;
-  height: 350px;
-  z-index: 1200;
+  width: 100%;
+  flex: 1;
 }
 
 .active-filter {
@@ -90,4 +92,8 @@
   .visualization-filter-body {
     width: 95%;
   }
+}
+
+:host {
+  height: 100%;
 }
