--- a/src/map/components/map-style/map-style.component.css
+++ b/src/map/components/map-style/map-style.component.css
@@ -198,8 +198,8 @@
 
 .color-picker {
   height: 100%;
-  margin: 0 2px;
-  border-radius: 3px;
+  width: 100px !important;
+  border-radius: 0.25rem;
 }
 
 .style-filter-btns {
