--- a/src/map/components/map-style/map-style.component.html
+++ b/src/map/components/map-style/map-style.component.html
@@ -55,12 +55,17 @@
         <input (change)="onFontSizeChange($event.target.value)" class="form-control size-input" type="number" [value]="getNumberFromFontSize(displaySettings.labelFontSize)">
       </label>
       <div class="labels-control">
-        <button type="button" class="btn btn-outline-dark font-weight-bold active mr-1">B</button>
+        <button type="button" class="btn btn-outline-dark font-weight-bold active">B</button>
         <button type="button" class="btn btn-outline-dark font-italic ml-1">I</button>
-        <input class="color-picker" (change)="onColorChange($event.target.value)" type="color" [value]="displaySettings.labelFontColor">
+        <div class="col-md-3">
+          <input class="color-picker" [style.background]="displaySettings.labelFontColor" [colorPicker]="displaySettings.labelFontColor"
+            (colorPickerChange)="onColorChange($event)" [cpCancelButton]="true" [cpCancelButtonClass]="'btn btn-outline-secondary btn-xs mr-3'"
+            [cpOKButton]="true" [cpOKButtonClass]="'btn btn-outline-primary btn-xs'" [value]="displaySettings.labelFontColor">
+        </div>
       </div>
     </div>
   </div>
+  <div></div>
 
   <div class="style-filter-btns">
     <button class="btn btn-outline-secondary btn-sm" [disabled]="isloading" (click)="onCanceling($event)">Close</button>
