--- a/src/map/components/map-style/map-style.component.html
+++ b/src/map/components/map-style/map-style.component.html
@@ -60,7 +60,7 @@
         <div class="col-md-3">
           <input class="color-picker" [style.background]="displaySettings.labelFontColor" [colorPicker]="displaySettings.labelFontColor"
             (colorPickerChange)="onColorChange($event)" [cpCancelButton]="true" [cpCancelButtonClass]="'btn btn-outline-secondary btn-xs mr-3'"
-            [cpOKButton]="true" [cpOKButtonClass]="'btn btn-outline-primary btn-xs'" [value]="displaySettings.labelFontColor">
+            [cpOKButton]="true" [cpOKButtonText]="'Done'" [cpOKButtonClass]="'btn btn-outline-primary btn-xs'" [value]="displaySettings.labelFontColor">
         </div>
       </div>
     </div>
