--- a/src/map/containers/visualization-legend/visualization-legend.component.html
+++ b/src/map/containers/visualization-legend/visualization-legend.component.html
@@ -15,7 +15,7 @@
                 <img *ngIf="legend.hidden" src="assets/icons/eye-cross.png" alt="">
               </a>
             </div>
-            <div class="filter__button" *ngIf="activeLayer === i && !(isFilterSectionOpen$ | async)" [ngStyle]="{'top': 'calc(' + buttonTop+ 'px)'}">
+            <div class="filter__button" *ngIf="activeLayer === i && !(isFilterSectionOpen$ | async)">
               <button class="visualization-btn" title="Filter by different dimensions" (click)="openFilters($event)">
                 <img alt="" src="assets/icons/filter.png">
               </button>
