--- a/src/map/containers/visualization-legend/visualization-legend.component.css
+++ b/src/map/containers/visualization-legend/visualization-legend.component.css
@@ -601,7 +601,7 @@ table.legend-button-table tr td {
 
 .filter__button {
   position: absolute;
-  top: 0;
+  margin-top: -5px;
   right: -34px;
   text-align: center;
 }
