--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -215,3 +215,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.favourite_selection {
+  position: absolute;
+  background: #ffffff;
+  min-width: 400px;
+  top: 10px;
+  right: 5px;
+  z-index: 500;
+}
