update css for printing and buttons for filters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="favourite_selection">
+<div class="favourite_selection no-print">
   <form novalidate [formGroup]="favForm">
     <div class="data-filter-group-selection">
       <button class="btn btn-outline-secondary btn-sm data-filter-group-btn" (click)="toggleFavSelection($event)">
