--- a/src/map/components/map-filter-section/map-filter-section.component.html
+++ b/src/map/components/map-filter-section/map-filter-section.component.html
@@ -1,28 +1,28 @@
 <div class="visualization-filter-section">
   <div class="visualization-filter-buttons">
-    <button class="dashboard-btn button-close visualization-filter-btn border-round-right" title="Filter by different dimensions"
+    <button type="button" class="btn btn-outline-dark btn-sm button-close visualization-filter-btn border-round-right" title="Filter by different dimensions"
       [disabled]="!loaded" (click)="toggleFilters($event)">
       <img *ngIf="showFilters" src="assets/icons/close.png" alt="">
     </button>
     <div class="visualization-filter-list" *ngIf="showFilters">
 
-      <button class="dashboard-btn org-unit-filter-btn border-round " [ngClass]="{'active-filter': selectedFilter === 'ORG_UNIT'}"
+      <button type="button" class="btn btn-outline-dark btn-sm org-unit-filter-btn border-round " [ngClass]="{'active-filter': selectedFilter === 'ORG_UNIT'}"
         title="Filter by organisation unit" (click)="toggleCurrentFilter($event, 'ORG_UNIT')">
         <img src="assets/icons/tree.png" alt="">
         <span>Org Unit</span>
       </button>
-      <button class="dashboard-btn data-filter-btn border-round" [ngClass]="{'active-filter': selectedFilter === 'DATA'}" title="Filter by data"
-        (click)="toggleCurrentFilter($event, 'DATA')">
+      <button type="button" class="btn btn-outline-dark btn-sm data-filter-btn border-round" [ngClass]="{'active-filter': selectedFilter === 'DATA'}"
+        title="Filter by data" (click)="toggleCurrentFilter($event, 'DATA')">
         <img src="assets/icons/data.png" alt="">
         <span>Data</span>
       </button>
-      <button class="dashboard-btn period-filter-btn border-round" [ngClass]="{'active-filter': selectedFilter === 'PERIOD'}" title="Filter by period"
-        (click)="toggleCurrentFilter($event, 'PERIOD')">
+      <button type="button" class="btn btn-outline-dark btn-sm period-filter-btn border-round" [ngClass]="{'active-filter': selectedFilter === 'PERIOD'}"
+        title="Filter by period" (click)="toggleCurrentFilter($event, 'PERIOD')">
         <img src="assets/icons/period.png" alt="">
         <span>Period</span>
       </button>
-      <button class="dashboard-btn style-filter-btn border-round" [ngClass]="{'active-filter': selectedFilter === 'STYLE'}" title="Filter by period"
-        (click)="toggleCurrentFilter($event, 'STYLE')">
+      <button type="button" class="btn btn-outline-dark btn-sm style-filter-btn border-round" [ngClass]="{'active-filter': selectedFilter === 'STYLE'}"
+        title="Filter by period" (click)="toggleCurrentFilter($event, 'STYLE')">
         <img src="assets/icons/period.png" alt="">
         <span>Style</span>
       </button>
