--- a/src/map/containers/visualization-legend/visualization-legend.component.css
+++ b/src/map/containers/visualization-legend/visualization-legend.component.css
@@ -661,3 +661,7 @@ input[type='range']::-webkit-slider-thumb:active {
   height: 12px;
   border-radius: 50%;
 }
+
+.map-legend-item.active-legend {
+  background-color: white;
+}
