--- a/src/map/containers/visualization-legend/visualization-legend.component.html
+++ b/src/map/containers/visualization-legend/visualization-legend.component.html
@@ -7,6 +7,9 @@
           ngxDraggable>
           <div class="map-legend-header" (click)="setActiveItem(i, $event)">
             <div class="map-legend-title-block">
+              <svg viewBox="0 0 24 24" style="width: 24px; height: 24px;cursor: ns-resize;">
+                <path fill="#757575" d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"></path>
+              </svg>
               <img src="assets/icons/map.png" alt="">
               <span class="map-legend-title">{{legend.title || legend.legend.title }}</span>
             </div>
@@ -93,8 +96,8 @@
         <pagination-controls (pageChange)="handlePageChange($event)" *ngIf="visualizationLegends.length > 3"></pagination-controls>
       </div>
       <div class="map-legend-list">
-        <div class="map-legend-item">
-          <div class="map-legend-header" (click)="setActiveItem(-1, $event)">
+        <div class="map-legend-item no-print">
+          <div class="map-legend-header-base_layer" (click)="setActiveItem(-1, $event)">
             <div class="map-legend-title-block">
               <img src="assets/icons/map.png" alt="">
               <span class="map-legend-title">Base Maps</span>
