downgrade angular dev kit from 0.901.00 to 0.900.7 to resolve production error from dragula library

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
     </div>
   </form>
 </div>
-{{ vizObject$ | async | json }}
+<!-- {{ vizObject$ | async | json }} -->
 <app-map [vizObject]="vizObject$ | async" *ngIf="vizObject$ | async"></app-map>
 <div class="_container__holder" id="mapid" *ngIf="!(vizObject$ | async)"></div>
 <app-loader *ngIf="isVisualizationLoading$ | async"></app-loader>
